testcases/output/error3.result
thread 'main' panicked at '

// This Program should trigger a "Syntax Error"
^
 Unexpected token: "/" at 1:0.', parser/src/lib.rs:938:9
note: Run with `RUST_BACKTRACE=1` for a backtrace.
